# rustline

./: Cargo.toml  README.md
src/: .env  agent.rs  app.rs  config.rs  main.rs  ollama.rs  tools.rs
